syntax = "proto3";


package getAuditsLogsPkg;

// The greeting service definition.
service AuditsLogs {
    // Sends a greeting

    rpc GetAuditLogs (auditRequest) returns (auditReply) {

    }
}

// The request message containing the user's name.
message auditRequest {
    int32 skip = 1;
    int32 limit = 2;
}

// The response message containing the greetings
message auditReply {
    string result = 1;
    int32 resultCount = 2;

}
